--- a/FireShare/Views/Home/Index.cshtml
+++ b/FireShare/Views/Home/Index.cshtml
@@ -4,5 +4,41 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+   <form asp-controller="Home" 
+      asp-action="UploadPhysical" 
+      method="post" 
+      enctype="multipart/form-data"
+      onsubmit="AJAXSubmit(this);return false;">
+
+    <input type="file" name="file" />
+    <br /><br />
+    <button type="submit">Upload File</button>
+</form>
 </div>
+
+@section Scripts {
+  <script>
+    "use strict";
+    async function AJAXSubmit (oFormElement) {
+      const formData = new FormData(oFormElement);
+      try {
+        const response = await fetch(oFormElement.action, {
+          method: 'POST',
+          headers: {
+            'RequestVerificationToken': getCookie('RequestVerificationToken')
+          },
+          body: formData
+        });
+        oFormElement.elements.namedItem("result").value = 
+          'Result: ' + response.status + ' ' + response.statusText;
+      } catch (error) {
+        console.error('Error:', error);
+      }
+    }
+    function getCookie(name) {
+      var value = "; " + document.cookie;
+      var parts = value.split("; " + name + "=");
+      if (parts.length == 2) return parts.pop().split(";").shift();
+    }
+  </script>
+}
