--- a/FireShare/Views/Home/Index.cshtml
+++ b/FireShare/Views/Home/Index.cshtml
@@ -4,16 +4,24 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-   <form asp-controller="Home" 
-      asp-action="UploadPhysical" 
-      method="post" 
-      enctype="multipart/form-data"
-      onsubmit="AJAXSubmit(this);return false;">
+   <form id="uploadForm" action="Streaming/UploadPhysical" method="post" 
+    enctype="multipart/form-data" onsubmit="AJAXSubmit(this);return false;">
+    <dl>
+        <dt>
+            <label for="file">File</label>
+        </dt>
+        <dd>
+            <input id="file" type="file" name="file" />
+        </dd>
+    </dl>
 
-    <input type="file" name="file" />
-    <br /><br />
-    <button type="submit">Upload File</button>
+    <input class="btn" type="submit" value="Upload" />
+
+    <div style="margin-top:15px">
+        <output form="uploadForm" name="result"></output>
+    </div>
 </form>
+<div id="result"></div>
 </div>
 
 @section Scripts {
@@ -29,8 +37,7 @@
           },
           body: formData
         });
-        oFormElement.elements.namedItem("result").value = 
-          'Result: ' + response.status + ' ' + response.statusText;
+        console.error('Result:', response.status + ' ' + response.statusText);
       } catch (error) {
         console.error('Error:', error);
       }
