--- a/FireShare/Views/Home/Index.cshtml
+++ b/FireShare/Views/Home/Index.cshtml
@@ -8,69 +8,82 @@
     </div>
     <div class="row">
         <div  class="col">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- HorizontalResponsivo -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-2122647083447667"
-                 data-ad-slot="2536456475"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <div align="center" class="center">
+                <!-- HorizontalResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="2536456475"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col">
-          <form id="uploadForm" action="Streaming/UploadFileStream" method="post" enctype="multipart/form-data">
-            <dl>
-                <dt>
-                    <label for="file">File</label>
-                </dt>
-                <dd>
-                    <input id="file" type="file" name="file" />
-                </dd>
-            </dl>
-
-            <input class="btn" type="button" value="Upload" onclick="return UploadSubimit(document.getElementById('uploadForm'), 'Streaming/UploadFileStream')" />
-
-            <div style="margin-top:15px">
-                <progress id="progressBar" value="0" max="100" style="width:300px;"></progress>
-                <h3 id="status"></h3>
-                <p id="loaded_n_total"></p>
-            </div>
+          <form id="uploadForm" action="Streaming/UploadFileStream" method="post" enctype="multipart/form-data"> 
+              <div class="d-flex justify-content-center h-100">
+			    <div class="user_card">
+				    <div class="d-flex justify-content-center">
+					    <div class="brand_logo_container">
+						    <img src="https://files.afonsoft.com.br/img/FileShareUpload512.png" class="brand_logo" alt="Logo">
+					    </div>
+				    </div>
+				    <div class="d-flex justify-content-center form_container">
+					    <form>
+						    <div class="form-group">
+		                        <div class="input-group input-file" name="Fichier1">
+    		                        <input type="text" class="form-control" placeholder='Choose a file...' />			
+                                    <span class="input-group-btn">
+        		                        <button class="btn btn-default btn-choose" type="button">Choose</button>
+    		                        </span>
+		                        </div>
+                            </div>
+                            <div class="d-flex justify-content-center mt-3 login_container">
+                                <progress id="progressBar" value="0" max="100" style="width:300px;"></progress>
+                                <h3 id="status"></h3>
+                                <p id="loaded_n_total"></p>
+                            </div>
+						    <div class="d-flex justify-content-center mt-3 login_container">
+				 	            <button type="button" name="button" class="btn login_btn" onclick="return UploadSubimit(document.getElementById('uploadForm'), 'Streaming/UploadFileStream')" >Upload</button>
+				            </div>
+					    </form>
+				    </div>
+			    </div>
+		    </div>
         </form>
         </div>
         <div class="col-8">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- QuadradoResponsivo -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-2122647083447667"
-                 data-ad-slot="8909468727"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <div align="center" class="center">
+                <!-- QuadradoResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="8909468727"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
         </div>
     </div>
     <div class="row">
         <div  class="col">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- HorizontalResponsivo -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-2122647083447667"
-                 data-ad-slot="2536456475"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <div align="center" class="center">
+                <!-- HorizontalResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="2536456475"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
         </div>
     </div>
 </div>
 
+
+@section Scripts {
+    <script>
+        
+    </script>
+}
    
