--- a/FireShare/Views/Home/Privacy.cshtml
+++ b/FireShare/Views/Home/Privacy.cshtml
@@ -1,6 +1,24 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+<h2>Privacy & Cookie statement</h2>
+<p> September 20, 2020 </p>
+<p style="margin-left: 2%; margin-right: 2%; text-align: justify;">
+Since day one, WeTransfer has cared about privacy and respecting our users. 
+Protecting the data of our users is of the highest importance to us, and we go to great lengths to make sure we keep it safe. 
+We take your trust and right to privacy seriously and work continuously to keep your digital footprint small and in your control. 
+Nevertheless, to enable you in your flow and to improve and secure our service, we need to process some personal information. 
+For privacy-related questions, please reach out to our Data Protection Officer via files@afonsoft.com.br. 
+This statement covers the processing activities of the WeTransfer services, software, websites (including browser extensions) and/or applications (together: “Services”). 
+The Services allow you to create, share, collect, capture and/or visualize your ideas, texts, graphics, videos, data, information, files, decks or other content (together: “Content”). 
+The Services may be provided to you online, in the form of a mobile and/or desktop application(s) and/or may be integrated in a third party service. 
+By using any of the Services you agree to have read and understood our Privacy and Cookie Statement as below. To make sure this Statement is easy to read, each question has a drop down with a short explanation, followed by a more formal statement.
+</p>
+<h2>Terms of Service</h2>
+<p> September 23, 2020 </p>
+<p style="margin-left: 2%; margin-right: 2%; text-align: justify;">
+    Your use of and access to our services, software, websites (including browser extensions) and/or applications (together: “Services”) are governed by these Terms of Service (“Terms”). 
+    The Services may be provided to you online, in the form of a mobile and/or desktop application(s) and/or may be integrated in a third party service. 
+    The Services allow you to upload, submit, store, share, receive, collect, capture and/or visualize your ideas, texts, graphics, videos, data, information, files, presentation decks or other content, including third party content used by you (together:“Content”). 
+    You retain all rights in- and responsibility and liability for all Content. FileShare does not claim ownership of your Content. 
+</p>
