--- a/FireShare/Views/Home/Index.cshtml
+++ b/FireShare/Views/Home/Index.cshtml
@@ -20,8 +20,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col">
-          <form id="uploadForm" action="Streaming/UploadFileStream" method="post" enctype="multipart/form-data"> 
+        <div class="col">      
               <div class="d-flex justify-content-center h-100">
 			    <div class="user_card">
 				    <div class="d-flex justify-content-center">
@@ -30,28 +29,34 @@
 					    </div>
 				    </div>
 				    <div class="d-flex justify-content-center form_container">
-					    <form>
-						    <div class="form-group">
-		                        <div class="input-group input-file" name="Fichier1">
-    		                        <input type="text" class="form-control" placeholder='Choose a file...' />			
-                                    <span class="input-group-btn">
-        		                        <button class="btn btn-default btn-choose" type="button">Choose</button>
-    		                        </span>
+					    <form id="uploadForm" action="Streaming/UploadFileStream" method="post" enctype="multipart/form-data"> 
+						    <div class="form-group mb-3">
+		                        <div class="custom-file">
+    		                        <input type="file" class="custom-file-input" id="customFile" />			
+                                    <label class="custom-file-label" for="customFile">Choose file</label>
 		                        </div>
                             </div>
-                            <div class="d-flex justify-content-center mt-3 login_container">
-                                <progress id="progressBar" value="0" max="100" style="width:300px;"></progress>
-                                <h3 id="status"></h3>
-                                <p id="loaded_n_total"></p>
-                            </div>
+                            <div class="input-group mb-2" style="height: 20px;display: block;">
+							    <div class="progress" id="progress" style="height: 20px;display: none;">
+                                    <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" id="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
+                                </div>
+						    </div>
 						    <div class="d-flex justify-content-center mt-3 login_container">
-				 	            <button type="button" name="button" class="btn login_btn" onclick="return UploadSubimit(document.getElementById('uploadForm'), 'Streaming/UploadFileStream')" >Upload</button>
+				 	            <button type="button" name="button" class="btn login_btn" onclick="return UploadSubimit(document.getElementById('uploadForm'), 'Streaming/UploadFileStream')" >Upload File</button>
 				            </div>
+
+                            <div class="form-group mb-3" style="margin-top: 20px;">
+                                <div class="alert alert-danger alert-dismissible" id="alertShow" role="alert" style="display: none;">
+                                    <span id="alertText"></span>
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="top:-12px;right:-10px;">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
 					    </form>
 				    </div>
 			    </div>
 		    </div>
-        </form>
         </div>
         <div class="col-8">
             <div align="center" class="center">
@@ -80,10 +85,4 @@
     </div>
 </div>
 
-
-@section Scripts {
-    <script>
-        
-    </script>
-}
    
