--- a/FireShare/Views/Shared/_Layout.cshtml
+++ b/FireShare/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container-fluid">
             &copy; 2020 - FireShare - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
