--- a/FireShare/wwwroot/css/site.css
+++ b/FireShare/wwwroot/css/site.css
@@ -101,8 +101,7 @@ body,
 html {
     margin: 0;
     padding: 0;
-    height: 100%;
-    background: #60a3bc !important;
+    background: #FAFAFA !important;
 }
 
 .user_card {
@@ -110,7 +109,7 @@ html {
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
-    background: #f39c12;
+    background: #60a3bc;
     position: relative;
     display: flex;
     justify-content: center;
@@ -128,7 +127,7 @@ html {
     width: 170px;
     top: -75px;
     border-radius: 50%;
-    background: #60a3bc;
+    background: #F0F0F0;
     padding: 10px;
     text-align: center;
 }
@@ -138,6 +137,7 @@ html {
     width: 150px;
     border-radius: 50%;
     border: 2px solid white;
+    background-color: white;
 }
 
 .form_container {
@@ -166,12 +166,3 @@ html {
     border-radius: 0.25rem 0 0 0.25rem !important;
 }
 
-.input_user,
-.input_pass:focus {
-    box-shadow: none !important;
-    outline: 0px !important;
-}
-
-.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-    background-color: #c0392b !important;
-}
