--- a/FireShare/Views/Home/Index.cshtml
+++ b/FireShare/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 					    </div>
 				    </div>
 				    <div class="d-flex justify-content-center form_container">
-					    <form id="uploadForm" action="Streaming/UploadFileStream" method="post" enctype="multipart/form-data"> 
+					    <form id="uploadForm" action="Streaming/UploadFileStream" method="post" enctype="multipart/form-data" asp-antiforgery="true"> 
 						    <div class="form-group mb-3">
 		                        <div class="custom-file">
     		                        <input type="file" class="custom-file-input" id="customFile" />			
@@ -44,7 +44,7 @@
 
                             <div class="form-group mb-3" style="margin-top: 20px;">
                                 <div class="alert alert-danger alert-dismissible" id="alertShow" role="alert" style="display: none;">
-                                    <span id="alertText"></span>
+                                    <div id="alertText"></div>
                                     <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="top:-12px;right:-10px;">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
