--- a/FireShare/Views/Shared/_Layout.cshtml
+++ b/FireShare/Views/Shared/_Layout.cshtml
@@ -55,7 +55,6 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23515540-6"></script>
     <!-- Google Tag Manager -->
@@ -99,6 +98,7 @@
     <footer class="border-top footer text-muted">
         <div class="container-fluid">
             &copy; 2020 - FireShare - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            @Html.AntiForgeryToken()
         </div>
     </footer>
     <environment include="Development">
@@ -113,6 +113,14 @@
         </script>
     </environment>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <environment include="Development">
+        <script src="~/lib/bootbox/bootbox.js"></script>
+    </environment>    
+    <environment exclude="Development">
+        <script src="~/lib/bootbox/bootbox.min.js"></script>
+    </environment>
+
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
@@ -124,10 +132,5 @@
         gtag('config', 'UA-23515540-6');
     </script>
 
-    <script>
-        [].forEach.call(document.querySelectorAll('.adsbygoogle'), function(){
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        });
-    </script>
 </body>
 </html>
