--- a/FireShare/Views/Home/Index.cshtml
+++ b/FireShare/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row" style="margin-top: 80px;">
         <div class="col">      
               <div class="d-flex justify-content-center h-100">
 			    <div class="user_card">
@@ -67,7 +67,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row" style="margin-top: 30px;margin-bottom: 60px;">
         <div  class="col">
             <div align="center" class="center">
                 <!-- HorizontalResponsivo -->
