--- a/FireShare/Views/Home/Privacy.cshtml
+++ b/FireShare/Views/Home/Privacy.cshtml
@@ -22,3 +22,14 @@ By using any of the Services you agree to have read and understood our Privacy a
     The Services allow you to upload, submit, store, share, receive, collect, capture and/or visualize your ideas, texts, graphics, videos, data, information, files, presentation decks or other content, including third party content used by you (together:“Content”). 
     You retain all rights in- and responsibility and liability for all Content. FileShare does not claim ownership of your Content. 
 </p>
+<br />
+<br />
+<div align="center" class="center">
+    <!-- HorizontalResponsivo -->
+    <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-2122647083447667"
+            data-ad-slot="2536456475"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+</div>
