--- a/FireShare/Views/Download/Index.cshtml
+++ b/FireShare/Views/Download/Index.cshtml
@@ -1,4 +1,90 @@
 ﻿@{
     ViewData["Title"] = "File Share";
 }
+@model FireShare.Models.FileModel
 
+<div class="container-fluid">
+    <div class="row">
+        <div  class="col">
+            <div align="center" class="center">
+                <!-- HorizontalResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="2536456475"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="margin-top: 80px;">
+        <div class="col-4">
+            <div align="center" class="center">
+                <!-- QuadradoResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="8909468727"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+        </div>
+        <div class="col-4">      
+            <div class="d-flex justify-content-center h-100">
+			    <div class="user_card">
+				    <div class="d-flex justify-content-center">
+					    <div class="brand_logo_container">
+						    <img src="https://files.afonsoft.com.br/img/FileShareDownload512.png" class="brand_logo" alt="Logo">
+					    </div>
+				    </div>
+				    <div class="d-flex justify-content-center form_container">
+					    <form id="downloadForm" action="Streaming/DownloadFileStream" method="post" asp-antiforgery="true"> 
+						    <div class="form-group mb-3">
+		                        @Model.Hash
+                            </div>
+                            <div class="form-group mb-3">
+		                        @Model.TrustedName
+                            </div>
+                            <div class="form-group mb-3">
+		                        @Model.Size
+                            </div>
+                             <div class="form-group mb-3" >
+							   @Model.Type
+						    </div>
+                            <div class="form-group mb-3" >
+							   @Model.UploadDT
+						    </div>
+						    <div class="d-flex justify-content-center mt-3 login_container">
+				 	            <button type="button" name="button" class="btn login_btn" >Download File</button>
+				            </div>
+					    </form>
+				    </div>
+			    </div>
+		    </div>
+        </div>
+        <div class="col-4">
+            <div align="center" class="center">
+                <!-- QuadradoResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="8909468727"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="margin-top: 30px;margin-bottom: 60px;">
+        <div  class="col">
+            <div align="center" class="center">
+                <!-- HorizontalResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="2536456475"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+        </div>
+    </div>
+</div>
