--- a/FireShare/Views/Home/Index.cshtml
+++ b/FireShare/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 					    </div>
 				    </div>
 				    <div class="d-flex justify-content-center form_container">
-					    <form id="uploadForm" action="Streaming/UploadFileStream" method="post" enctype="multipart/form-data" asp-antiforgery="true"> 
+					    <form id="uploadForm" action="Streaming/UploadFileStream" method="post" enctype="multipart/form-data"> 
 						    <div class="form-group mb-3">
 		                        <div class="custom-file">
     		                        <input type="file" class="custom-file-input" id="customFile" />			
