--- a/FireShare/Views/Download/Index.cshtml
+++ b/FireShare/Views/Download/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "File Share";
 }
-@model FireShare.Models.FileModel
+@model FileShare.Models.FileModel
 
 <div class="container-fluid">
     <div class="row">
