--- a/FireShare/Views/_ViewImports.cshtml
+++ b/FireShare/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using FireShare
-@using FireShare.Models
+﻿@using FileShare
+@using FileShare.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
