--- a/FireShare/Views/Home/Index.cshtml
+++ b/FireShare/Views/Home/Index.cshtml
@@ -26,10 +26,10 @@
 					    </div>
 				    </div>
 				    <div class="d-flex justify-content-center form_container">
-					    <form id="uploadForm" action="Streaming/UploadFileStream" method="post" enctype="multipart/form-data"> 
+					    <form id="uploadForm" action="Streaming/UploadFileStream" method="post" enctype="multipart/form-data">
 						    <div class="form-group mb-3">
 		                        <div class="custom-file">
-    		                        <input type="file" class="custom-file-input" id="customFile" />			
+    		                        <input type="file" class="custom-file-input" />			
                                     <label class="custom-file-label" for="customFile">Choose file</label>
 		                        </div>
                             </div>
@@ -39,7 +39,7 @@
                                 </div>
 						    </div>
 						    <div class="d-flex justify-content-center mt-3 login_container">
-				 	            <button type="button" name="button" class="btn login_btn" onclick="return UploadSubimit(document.getElementById('uploadForm'), 'Streaming/UploadFileStream')" >Upload File</button>
+				 	            <button type="button" name="button" class="btn login_btn" onclick="return UploadSubimit();" >Upload File</button>
 				            </div>
 
                             <div class="form-group mb-3" style="margin-top: 20px;">
