--- a/FileShare/Views/Home/Privacy.cshtml
+++ b/FileShare/Views/Home/Privacy.cshtml
@@ -4,7 +4,7 @@
 <h2>Privacy & Cookie statement</h2>
 <p> September 20, 2020 </p>
 <p style="margin-left: 2%; margin-right: 2%; text-align: justify;">
-Since day one, WeTransfer has cared about privacy and respecting our users. 
+Since day one, FileShare has cared about privacy and respecting our users. 
 Protecting the data of our users is of the highest importance to us, and we go to great lengths to make sure we keep it safe. 
 We take your trust and right to privacy seriously and work continuously to keep your digital footprint small and in your control. 
 Nevertheless, to enable you in your flow and to improve and secure our service, we need to process some personal information. 
