--- a/FileShare/Views/Download/Index.cshtml
+++ b/FileShare/Views/Download/Index.cshtml
@@ -40,25 +40,36 @@
 				    <div class="d-flex justify-content-center form_container">
 					    <form id="downloadForm" asp-controller="Streaming" asp-action="DownloadFileStream" method="post" asp-antiforgery="true"> 
 						    
+                            <input type="hidden" asp-for="@Model.Id" />
+                            <input type="hidden" asp-for="@Model.TrustedName" />
+                            <input type="hidden" asp-for="@Model.Hash" />
                             <input type="hidden" asp-for="@Model.Path" />
-                            <div class="form-group mb-3">
-		                        @Model.Hash
+                            <input type="hidden" asp-for="@Model.Size" />
+                            <input type="hidden" asp-for="@Model.Type" />
+                            <input type="hidden" asp-for="@Model.UploadDT" />
+                            <input type="hidden" asp-for="@Model.UntrustedName" />
+
+                            <div class="container-fluid">
+                                <div class="form-group mb-3 row">
+                                    <label asp-for="@Model.TrustedName"></label>
+                                    <div class="col">@Model.TrustedName</idv>
+                                </div>
+                                <div class="form-group mb-3 row">
+		                            <label asp-for="@Model.Size"></label>
+                                    <div class="col">@Model.Size</idv>
+                                </div>
+                                <div class="form-group mb-3 row">
+		                            <label asp-for="@Model.Type"></label>
+                                    <div class="col">@Model.Type</idv>
+                                </div>
+                                <div class="form-group mb-3 row" >
+                                    <label asp-for="@Model.UploadDT"></label>
+                                    <div class="col">@Model.UploadDT</idv>
+						        </div>
+						        <div class="d-flex justify-content-center mt-3 login_container row">
+				 	                <button type="submit" name="button" class="btn login_btn" >Download File</button>
+				                </div>
                             </div>
-                            <div class="form-group mb-3">
-		                        @Model.TrustedName
-                            </div>
-                            <div class="form-group mb-3">
-		                        @Model.Size
-                            </div>
-                             <div class="form-group mb-3" >
-							   @Model.Type
-						    </div>
-                            <div class="form-group mb-3" >
-							   @Model.UploadDT
-						    </div>
-						    <div class="d-flex justify-content-center mt-3 login_container">
-				 	            <button type="button" name="button" class="btn login_btn" >Download File</button>
-				            </div>
 					    </form>
 				    </div>
 			    </div>
