--- a/FileShare/Views/Shared/_Layout.cshtml
+++ b/FileShare/Views/Shared/_Layout.cshtml
@@ -115,9 +115,11 @@
 
     <environment include="Development">
         <script src="~/lib/bootbox/bootbox.js"></script>
+        <script src="~/lib/jquery-countdown360/jquery.countdown360.js"></script>
     </environment>    
     <environment exclude="Development">
         <script src="~/lib/bootbox/bootbox.min.js"></script>
+        <script src="~/lib/jquery-countdown360/jquery.countdown360.min.js"></script>
     </environment>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
