--- a/FileShare/wwwroot/css/site.css
+++ b/FileShare/wwwroot/css/site.css
@@ -105,7 +105,7 @@ html {
 }
 
 .user_card {
-    height: 400px;
+    min-height: 450px;
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
