--- a/FileShare/Views/Download/Index.cshtml
+++ b/FileShare/Views/Download/Index.cshtml
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="row" style="margin-top: 80px;">
-        <div class="col-3">
+        <div class="col-12 col-sm-12 col-md-3 col-lg-3">
             <div align="center" class="center">
                 <!-- QuadradoResponsivo -->
                 <ins class="adsbygoogle"
@@ -29,7 +29,7 @@
                      data-full-width-responsive="true"></ins>
             </div>
         </div>
-        <div class="col-6">      
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">      
             <div class="d-flex justify-content-center h-100">
 			    <div class="user_card" style="width: 100%;">
 				    <div class="d-flex justify-content-center">
@@ -77,7 +77,7 @@
 			    </div>
 		    </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-12 col-md-3 col-lg-3">
             <div align="center" class="center">
                 <!-- QuadradoResponsivo -->
                 <ins class="adsbygoogle"
