--- a/FileShare/wwwroot/css/site.css
+++ b/FileShare/wwwroot/css/site.css
@@ -166,3 +166,8 @@ html {
     border-radius: 0.25rem 0 0 0.25rem !important;
 }
 
+@media (max-width: 767px) {
+    .HideColInMobile {
+        display: none;
+    }
+}
