--- a/FileShare/Views/Shared/_Layout.cshtml
+++ b/FileShare/Views/Shared/_Layout.cshtml
@@ -50,6 +50,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="~/lib/jquery-bootgrid/jquery.bootgrid.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="~/css/glyphicons.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 
