--- a/FileShare/Views/List/Index.cshtml
+++ b/FileShare/Views/List/Index.cshtml
@@ -68,7 +68,7 @@
                         "actions": function (column, row) {
                             return "<div class='btn-group btn-group-sm' role='group'>" +
                                 "<a href='#' alt='download' class='btn btn-info btn-sm' data-command='download' data-row-id = '" + row.hash + "'>" +
-                                "<span class='glyphicon glyphicon-list'></span>" + "</a></div>";
+                                "<span class='glyphicon glyphicon-cloud-download'></span>" + "</a></div>";
                         }
                     },
                     converters: {
