Disable Job JobDeleteFilesNotExist

--- a/FileShare/Views/Shared/_Layout.cshtml
+++ b/FileShare/Views/Shared/_Layout.cshtml
@@ -10,7 +10,12 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
     <meta name="pinterest" content="nopin" />
     <meta name="referrer" content="origin" />
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="follow, all" />
+    <meta http-equiv="content-language" content="pt-br" />
+    <meta name="resource-type" content="document" />
+    <meta name="distribution" content="GLOBAL" />
+
+    <meta name="copyright" content="AFONSOFT 2020" />
 
     <meta property="og:description" content="FileShare is the simplest way to send your files around the world">
     <meta property="og:title" content="FileShare">
@@ -19,20 +24,29 @@
     <meta property="og:locale" content="pt_BR" />
 
     <meta itemprop="name" content="FileShare"/>
-	<meta itemprop="description" content="FileShare is the simplest way to send your files around the world. Share large files up to 2GB for free."/>
+	<meta itemprop="description" content="FileShare is the simplest way to send your files around the world. Share large files up to 1GB for free."/>
 	<meta itemprop="image" content="https://files.afonsoft.com.br/img/FileShareUpload128.png"/>
 	<meta itemprop="url" content="https://files.afonsoft.com.br"/>
 
 	<meta name="twitter:card" content="FileShare is the simplest way to send your files around the world"/>
 	<meta name="twitter:title" content="FileShare"/>
-	<meta name="twitter:description" content="FileShare is the simplest way to send your files around the world. Share large files up to 2GB for free."/>
+	<meta name="twitter:description" content="FileShare is the simplest way to send your files around the world. Share large files up to 1GB for free."/>
 	<meta name="twitter:image" content="https://files.afonsoft.com.br/img/FileShareUpload128.png"/>
 
-    <meta name="description" content="FileShare is the simplest way to send your files around the world. Share large files up to 2GB for free.">
+    <meta name="classification" content="FileShare is the simplest way to send your files around the world. Share large files up to 1GB for free."/>
+    <meta name="description" content="FileShare is the simplest way to send your files around the world. Share large files up to 1GB for free.">
     <meta name="author" content="FileShare">
+    <meta name="url" content="https://files.afonsoft.com.br/" />
+    <meta name="keywords" content="FileShare, File Share, ShareFile, Share File, Upload, download, drive, cloud" />
+
     <link rel="canonical" href="https://files.afonsoft.com.br/" />
+    <link rel="made" href="mailto:afonsoft@afonsoft.com.br" />
 
     <meta name="application-name" content="FileShare"/>
+
+    <meta name="msvalidate.01" content="5D855AEDE7237C848BC7833AC7DACFB3" />
+    <meta name="google-site-verification" content="QhTVZkJfVIsGCTwGRZNJp9pzF6Fj5GN5-wpoGWtgGSY" />
+    <meta name="p:domain_verify" content="08f7b7a294c9e41d380a9e0ff847a8f4" />
 
     <link rel="shortcut icon" href="https://files.afonsoft.com.br/img/FileShareUpload64.png" />
     <link rel="icon" sizes="64x64" href="https://files.afonsoft.com.br/img/FileShareUpload64.png">
