Correção do Mine Type small

--- a/FileShare/Views/Home/Index.cshtml
+++ b/FileShare/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
 						    <div class="form-group mb-3">
 		                        <div class="custom-file">
     		                        <input class="custom-file-input" id="file" type="file" name="file" />			
-                                    <label class="custom-file-label" for="customFile">Choose file</label>
+                                    <label class="custom-file-label" for="customFile" style="font-size: 10pt;">Choose file</label>
 		                        </div>
                             </div>
                             <div class="input-group mb-2" style="height: 20px;display: block;">
