--- a/FileShare/Views/Auth/Login.cshtml
+++ b/FileShare/Views/Auth/Login.cshtml
@@ -1,5 +1,11 @@
 ﻿@model FileShare.Models.LoginModel
-
+@using Microsoft.AspNetCore.Identity
+@using FileShare.Repository;
+@inject SignInManager<ApplicationIdentityUser> SignInManager
+@inject UserManager<ApplicationIdentityUser> UserManager
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
 @{
     ViewData["Title"] = "Login";
 }
