--- a/FileShare/Views/Auth/Denied.cshtml
+++ b/FileShare/Views/Auth/Denied.cshtml
@@ -3,14 +3,40 @@
 }
 
 <div class="container py-5">
-          <div class="row">
-               <div class="col-md-2 text-center">
-                    <p><i class="fa fa-exclamation-triangle fa-5x"></i><br/>Status Code: 403</p>
-               </div>
-               <div class="col-md-10">
-                    <h3>OPPSSS!!!! Sorry...</h3>
-                    <p>Sorry, your access is refused due to security reasons of our server and also our sensitive data.<br/>Please go back to the previous page to continue browsing.</p>
-                    <a class="btn btn-danger" href="javascript:history.back()">Go Back</a>
-               </div>
-          </div>
-     </div>
+  <div class="row">
+        <div  class="col">
+            <div align="center" class="center">
+                <!-- HorizontalResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="2536456475"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2 text-center">
+            <p><i class="fa fa-exclamation-triangle fa-5x"></i><br/>Status Code: 403</p>
+        </div>
+        <div class="col-md-10">
+            <h3>OPPSSS!!!! Sorry...</h3>
+            <p>Sorry, your access is refused due to security reasons of our server and also our sensitive data.<br/>Please go back to the previous page to continue browsing.</p>
+            <a class="btn btn-danger" href="javascript:history.back()">Go Back</a>
+        </div>
+    </div>
+     <div class="row" style="margin-top: 30px;margin-bottom: 60px;">
+        <div  class="col">
+            <div align="center" class="center">
+                <!-- HorizontalResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="2536456475"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+        </div>
+    </div>
+</div>
